--- a/lab08/Karanakova_Lab8.ipynb
+++ b/lab08/Karanakova_Lab8.ipynb
@@ -356,7 +356,7 @@
     "              test_key_heap_5,\n",
     "              test_median_1,\n",
     "              test_median_2,\n",
-    "              #test_median_3,\n",
+    "              test_median_3,\n",
     "              test_topk_students\n",
     "              ]:\n",
     "        say_test(t)\n",
